<resources>
    <string name="app_name">BTA</string>
    <string name="forgetPassword">
        <u>Forget Password?</u>
    </string>
    <string name="title_activity_student_account">student_account</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_administrator_account">administrator_account</string>
    <string name="action_settings">Settings</string>
    <string name="student_records_system">Student Records System</string>
    <string name="title_activity_students">BTA: Students</string>
    <string name="title_activity_courses">BTA: Courses</string>
    <string name="title_activity_student_courses">BTA: Student Course History</string>
    <string name="title_activity_course_students">BTA: Course Registrations</string>
    <string name="students">Students</string>
    <string name="admin">Admin</string>
    <string name="advisors">Advisors</string>
    <string name="courses">Courses</string>
    <string name="registrations">Registrations</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="course_id">Course ID</string>
    <string name="gpa">GPA</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="student_accounts">Student Accounts</string>
    <string name="course_list">Course List</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_student_list">BTA: Student List</string>
    <string name="title_activity_create_student">BTA: Create Student</string>
    <string name="create_student">Create Student</string>
    <string name="title_activity_edit_student">BTA: Edit Student</string>
    <string name="edit_student">Edit Student</string>
    <string name="instructors_sections">My Sections</string>
    <string name="search_students">Search Students</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_name">Section Name</string>
    <string name="update_grade">Update Grade</string>
    <string name="instructor_set_grade_text_box_hint">Grade</string>
    <string name="create_student_name_edit_text_box_hint">Student Name</string>
    <string name="select_a_degree_text_box_hint_for_create_student">Select a Degree</string>
    <string name="student_name_label_for_edit_student">Student Name</string>
    <string name="student_name_hint_for_edit_student_text_box">Student Name</string>
    <string name="student_id_placeholder_text_for_edit_student_text_box">Student ID</string>
    <string name="student_id_label_for_edit_student_text_box">Student ID</string>
    <string name="student_password_label_for_edit_student_text_box">Student Password</string>
    <string name="select_a_degree_text_box_hint_in_edit_student">Select a Degree</string>
    <string name="student_degree_text_box_label_in_edit_student">Student Degree</string>
    <string name="add_student_for_admin_button">Add Student</string>
    <string name="delete_student_for_admin_button">Delete Student</string>
    <string name="student_id_hint_for_admin_delete_student_text_box">Student ID</string>
    <string name="student_id_hint_for_advisor_search_student_text_box">Student ID</string>
    <string name="student_name_place_holder_for_advisor_review_student_page">Student Name</string>
    <string name="student_gpa_place_holder_for_advisor_review_student_page">Student GPA</string>
    <string name="current_courses_place_holder_for_advisor_review_student_page">Current Courses</string>
    <string name="past_courses_place_holder_for_advisor_review_student_page">Past Courses</string>
    <string name="category_name_place_holder_category_landing_page">Category Name</string>
    <string name="course_id_hint_for_add_a_course_text_box">Course ID</string>
    <string name="course_name_hint_for_add_a_course_text_box">Course Name</string>
    <string name="credit_hours_hint_for_add_a_course_text_box">Credit Hours</string>
    <string name="description_hint_for_add_a_course_text_box">Description</string>
    <string name="select_degree_s_hint_for_add_course_text_box">Select Degree(s)</string>
    <string name="tuition_fee_hint_for_add_a_course_text_box">Tuition Fee</string>
    <string name="delete_course_button_text_for_category_landing_page">Delete Course</string>
    <string name="course_id_for_delete_a_course_text_box">Course ID</string>
    <string name="add_course_btn_text_for_category_landing_page">Add Course</string>
    <string name="course_title_place_holder_for_add_a_section_page">Course Title</string>
    <string name="course_description_place_holder_for_add_a_section_page">Course Description</string>
    <string name="hint_for_instructor_text_box_in_add_a_section_page">Instructor</string>
    <string name="hint_for_location_text_box_in_add_a_section_page">Location</string>
    <string name="hint_for_start_time_text_box_for_add_a_section_page">Pick Start Time</string>
    <string name="hint_for_end_time_text_box_for_add_a_section_page">Pick End Time</string>
    <string name="hint_for_days_text_box_in_add_a_section_page">Select Days</string>
    <string name="hint_for_section_id_text_box_in_add_a_section_page">Section ID</string>
    <string name="hint_for_capacity_text_box_in_add_a_section_page">Capacity</string>
    <string name="text_for_add_a_section_button_in_admin_side">Add Section</string>
    <string name="text_for_delete_section_button_in_admin_side">Delete Section</string>
    <string name="hint_for_delete_section_id_text_box_in_add_a_section_page">Section ID</string>
    <string name="text_for_add_a_category_button_in_admin_side">Add Category</string>
    <string name="hint_for_category_name_text_box_in_add_a_category_page">Category Name</string>
    <string name="welcome_message_in_main_activity">Welcome</string>
    <string name="app_title_in_main_activity">Better Than Aurora</string>
    <string name="hint_for_user_name_text_box_in_log_in_page">User ID</string>
    <string name="login_button_text_in_main_activity">Login</string>
    <string name="hint_for_enter_a_new_degree_text_box_in_new_degree_dialog">Type Degree name…</string>
    <string name="text_for_add_button_in_add_a_new_degree_dialog">Add</string>
    <string name="text_for_cancel_button_in_add_a_new_degree_dialog">Cancel</string>
    <string name="course_title_place_holder_text_in_course_list_item">Title:</string>
    <string name="course_code_place_holder_in_course_list_item">Code:</string>
    <string name="credit_hours_place_holder_in_course_list_item">Credit Hours:</string>
    <string name="description_place_holder_in_course_list_item">Description:</string>
    <string name="view_account_summary_button_text_in_student_profile">View Account Summary</string>
    <string name="confirmation_message_for_student_adding_a_section">Are you sure?</string>
    <string name="add_btn_text_for_student_adding_a_section">Add</string>
    <string name="add_a_course_btn_text_in_add_or_drop_course_page">Add a course</string>
    <string name="drop_a_course_btn_text_in_add_or_drop_course_page">Drop a course</string>
    <string name="drop_btn_text_for_student_dropping_a_section">Drop</string>
    <string name="gpa_label_text_in_student_history_fragment">GPA:</string>
    <string name="credit_hours_label_text_in_student_history_fragment">Credit Hours:</string>
    <string name="add_drop_courses_btn_text_for_student_courses_fragment">Add/Drop Courses</string>
    <string name="view_available_courses_btn_text_for_student_courses_fragment">View Available Courses</string>
    <string name="history_btn_text_for_student_courses_fragment">History</string>
    <string name="degree_progress_label_text_in_student_home_fragment">Your Degree Progress:</string>
    <string name="enrolled_courses_label_text_for_student_home_fragment">Courses you are enrolled in:</string>
    <string name="no_enrolled_courses_label_text_for_student_home_fragment">You are so lucky to not be registered in any sections right now.</string>
    <string name="degree_required_courses_label_text_for_student_home_fragment">Courses you need to take:</string>
    <string name="no_degree_required_courses_label_text_for_student_home_fragment">You are done with your degree, go get some sleep.</string>
    <string name="view_student_records_btn_text_for_student_fees_fragment">View Student Records</string>
    <string name="logout_btn_text_for_student_settings_fragment">Logout</string>
    <string name="endowment_fee_label_text_in_student_fees_break_down_fragment">Endowment Fee:</string>
    <string name="term_period_in_student_fees_breakdown_fragment">Winter 2022\n</string>
    <string name="endowment_fee_place_holder_amount_in_student_fees_breakdown_fragment">$39.00</string>
    <string name="tuition_fees_label_text_in_student_fees_breakdown_fragment">\nTuition:</string>
    <string name="registration_fee_label_text_in_student_fees_breakdown_fragment">\nRegistration Fee:</string>
    <string name="registration_fee_amount_place_holder_for_student_fees_breakdown_fragment">\n$24.57</string>
    <string name="recreational_service_fee_label_text_for_student_fees_breakdown_fragment"><![CDATA[\nSport & Rec Fee:]]></string>
    <string name="recreational_service_amount_place_holder_for_student_fees_breakdown_fragment">\n$93.26\n</string>
    <string name="tech_fee_label_text_for_student_fees_breakdown_fragment">Tech Fee:</string>
    <string name="tech_fee_amount_place_holder_for_student_fees_breakdown_fragment">$80.00\n</string>
    <string name="total_term_charges_label_text_for_Student_fees_breakdown_fragment">Total Term Charges:</string>
    <string name="divider_for_due_date_in_student_fees_breakdown_fragment">----------------------------------------------</string>
    <string name="due_date_label_text_for_student_fees_breakdown_fragment">\nBalance due May 6th, 2022 :</string>
    <string name="next_btn_text_in_view_categories_for_Student_courses_fragment">Next</string>
    <string name="section_id_place_holder_for_section_list_item">Section:</string>
    <string name="instructor_place_holder_for_section_list_item">Instructor:</string>
    <string name="time_place_holder_for_section_list_item">Times:\n</string>
    <string name="location_place_holder_for_section_list_item">Location:</string>
    <string name="capacity_place_holder_for_section_list_item">Capacity:</string>
    <string name="available_place_holder_for_section_list_item">Available:</string>
    <string name="prompt_message_for_select_a_degree_for_Student_dialog">Select the degree for this student</string>
    <string name="add_a_new_degree_btn_text_in_select_a_degree_for_student_dialog">Add a new Degree</string>
    <string name="prompt_message_for_select_course_degree_dialog">Select the degrees that require this course</string>
    <string name="done_selecting_course_degrees_btn_text_for_select_course_degrees_dialog">Done</string>
    <string name="add_a_new_degree_btn_text_for_select_course_degrees_dialog">Add a new Degree</string>
    <string name="prompt_message_for_select_section_days_dialog">Select Section Days</string>
    <string name="done_selecting_Section_days_btn_text_for_select_section_days_dialog">Done</string>
    <string name="course_place_holder_for_student_Section_list_item">Course:</string>
    <string name="grade_place_holder_for_student_Section_list_item">Grade:</string>
    <string name="hint_for_password_text_box_in_log_in_page">Password</string>
    <string name="section_time_picker_hint_in_add_a_section_page">Pick Section Time</string>
</resources>