<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/dialog_border"
    android:orientation="vertical"
    android:gravity="center">


    <EditText
        android:id="@+id/new_degree_text_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/edit_text_with_thick_border"
        android:hint="@string/hint_for_enter_a_new_degree_text_box_in_new_degree_dialog"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:textSize="18sp"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_a_degree_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/text_for_add_button_in_add_a_new_degree_dialog"
            android:textAllCaps="false"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancel_add_a_degree_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/text_for_cancel_button_in_add_a_new_degree_dialog"
            android:textAllCaps="false"
            android:textSize="18sp"
            tools:ignore="ButtonOrder,ButtonStyle" />
    </LinearLayout>


</LinearLayout>