<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/dark_green"
            android:onClick="buttonBackOnClick"
            android:src="?attr/homeAsUpIndicator"
            android:tint="@color/white"
            app:tint="@color/white"
            tools:srcCompat="?attr/homeAsUpIndicator" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/dark_green"
            android:text="@string/title_activity_edit_student"
            android:textColor="@color/white"
            android:textSize="30dp"
            tools:textColor="@color/white" />
        >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editStudentName"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="Student Name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editStudentID"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="100dp"
            android:hint="@string/student_id" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editStudentPassword"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="120dp"
            android:hint="@string/password" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/editStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:onClick="buttonEditStudent"
            android:text="@string/edit_student"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="79dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>